--- a/package.json
+++ b/package.json
@@ -23,14 +23,22 @@
     "autoprefixer": "^7.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0",
+    "postcss-assets": "^4.2.0",
     "postcss-loader": "^2.0.6",
     "postcss-px2rem": "^0.3.0",
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
+  },
+  "dependencies": {
+    "amfe-flexible": "^2.2.1"
   }
 }
