--- a/package.json
+++ b/package.json
@@ -12,27 +12,41 @@
     "type": "git",
     "url": "git+https://github.com/whidy/mobileweb.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "postcss",
+    "browsers"
+  ],
+  "author": "whidy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/whidy/mobileweb/issues"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "homepage": "https://github.com/whidy/mobileweb#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
+    "postcss": "^6.0.9",
+    "postcss-advanced-variables": "^1.2.2",
     "postcss-assets": "^4.2.0",
+    "postcss-comment": "^1.0.3",
     "postcss-loader": "^2.0.6",
+    "postcss-nested": "^2.1.2",
+    "postcss-nesting": "^4.1.0",
+    "postcss-partial-import": "^4.1.0",
     "postcss-px2rem": "^0.3.0",
-    "precss": "^2.0.0",
+    "postcss-scss": "^1.0.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
