--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-nested": "^2.1.2",
     "postcss-nesting": "^4.1.0",
     "postcss-partial-import": "^4.1.0",
+    "postcss-property-lookup": "^2.0.0",
     "postcss-pxtorem": "^4.0.1",
     "postcss-scss": "^1.0.2",
     "postcss-sorting": "^3.0.1",
