--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "postcss.config.js",
   "scripts": {
-    "start": "webpack-dev-server --env=dev",
-    "build": "webpack --env=prod --progress --profile --colors",
-    "build:dev": "webpack --env=dev --progress --profile --colors --watch"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --open --config webpack.config.js",
+    "build": "webpack -p --progress --mode production --config webpack.config.js",
+    "start": "npm run dev"
   },
   "repository": {
     "type": "git",
@@ -27,33 +27,34 @@
   ],
   "homepage": "https://github.com/whidy/mobileweb#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^2.1.1",
+    "autoprefixer": "^9.6.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
-    "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0",
-    "postcss": "^6.0.9",
-    "postcss-adaptive": "^0.4.0",
-    "postcss-advanced-variables": "^1.2.2",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "normalize.css": "^8.0.1",
+    "postcss": "^7.0.17",
+    "postcss-adaptive": "^0.5.0",
+    "postcss-advanced-variables": "^3.0.0",
     "postcss-assets": "^5.0.0",
-    "postcss-comment": "^1.0.3",
-    "postcss-loader": "^2.0.6",
-    "postcss-nested": "^2.1.2",
-    "postcss-nesting": "^4.1.0",
+    "postcss-comment": "^2.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
+    "postcss-nesting": "^7.0.0",
     "postcss-partial-import": "^4.1.0",
     "postcss-property-lookup": "^2.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-scss": "^1.0.2",
-    "postcss-sorting": "^3.0.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^2.0.0",
-    "webpack": "^3.5.4",
-    "webpack-dev-server": "^3.1.11"
+    "postcss-scss": "^2.0.0",
+    "postcss-sorting": "^5.0.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.0.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1"
