--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
+    "expose-loader": "^0.7.5",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
