--- a/package.json
+++ b/package.json
@@ -27,37 +27,33 @@
   ],
   "homepage": "https://github.com/whidy/mobileweb#readme",
   "devDependencies": {
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.4",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^4.3.0",
-    "html-webpack-plugin": "^3.2.0",
+    "expose-loader": "^1.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^7.0.27",
-    "postcss-adaptive": "^0.5.0",
-    "postcss-advanced-variables": "^3.0.0",
-    "postcss-assets": "^5.0.0",
-    "postcss-comment": "^2.0.0",
+    "postcss": "^7.0.32",
+    "postcss-advanced-variables": "^3.0.1",
+    "postcss-custom-properties": "^9.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
-    "postcss-nesting": "^7.0.1",
-    "postcss-partial-import": "^4.1.0",
-    "postcss-property-lookup": "^2.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-scss": "^2.0.0",
+    "postcss-scss": "^2.1.1",
     "postcss-sorting": "^5.0.1",
-    "style-loader": "^0.23.1",
-    "url-loader": "^2.3.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1"
+    "amfe-flexible": "^2.2.1",
+    "postcss-import": "^12.0.1"
   }
 }
