--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mobileweb",
   "version": "1.0.0",
-  "description": "",
+  "description": "a mobile web page demo with rem unit, created with webpack5 and postcss8",
   "main": "postcss.config.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack-dev-server --open --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=dev webpack server --open --config webpack.config.js",
     "build": "webpack -p --progress --mode production --config webpack.config.js",
     "start": "npm run dev"
   },
@@ -27,32 +27,32 @@
   ],
   "homepage": "https://github.com/whidy/mobileweb#readme",
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^5.2.1",
-    "css-loader": "^3.6.0",
-    "cssnano": "^4.1.10",
-    "expose-loader": "^1.0.0",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.4.1",
-    "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^0.9.0",
+    "autoprefixer": "^10.2.6",
+    "clean-webpack-plugin": "*",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "cssnano": "^5.0.5",
+    "expose-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "jquery": "^3.6.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^7.0.32",
+    "postcss": "^8.3.0",
     "postcss-advanced-variables": "^3.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.3",
-    "postcss-pxtorem": "^4.0.1",
-    "postcss-scss": "^2.1.1",
-    "postcss-sorting": "^5.0.1",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^5.3.0",
+    "postcss-nested": "^5.0.5",
+    "postcss-pxtorem": "^6.0.0",
+    "postcss-scss": "^3.0.5",
+    "postcss-sorting": "^6.0.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1",
-    "postcss-import": "^12.0.1"
+    "amfe-flexible": "^2.2.1"
   }
 }
