升级依赖，调整webpack配置

--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
   ],
   "homepage": "https://github.com/whidy/mobileweb#readme",
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "clean-webpack-plugin": "*",
+    "autoprefixer": "^10.4.7",
+    "clean-webpack-plugin": "4.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.6",
-    "cssnano": "^5.0.5",
-    "expose-loader": "^3.0.0",
-    "html-webpack-plugin": "^5.3.1",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.8",
+    "expose-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.3.0",
+    "postcss": "^8.4.13",
     "postcss-advanced-variables": "^3.0.1",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^5.3.0",
-    "postcss-nested": "^5.0.5",
+    "postcss-loader": "^6.2.1",
+    "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
     "postcss-pxtorem": "^6.0.0",
-    "postcss-scss": "^3.0.5",
-    "postcss-sorting": "^6.0.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "postcss-scss": "^4.0.4",
+    "postcss-sorting": "^7.0.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1"
